Items disappear if you drop them in the play area, but not on the plate/exercise log
Added year month format to control panel
Changed label on graphs from "Time" to "Age"
Changed year month format on graph horizontal axes
Added an animated help message that appears when you start to drag a food or exercise item that suggests you put it on the drop target

New in 0.00.71
Changed the layout to have the green control panel background extend to the top. This required moving some of the play area objects to the right. This was based on the "eating and exercise layout.pdf" in the doc directory as a guide - we used the "Modified 1" layout.
Made the Heart Strength indicator dependent on activity level as well as exercise.  Since the values for exercise and activity are month-long averages, it is inconvenient to set the days for which the person was very-sedentary to zero, so instead the following algorithm is used: activityToCount = max( ( averageActivity - 100 ) * 0.75, 0 )
Made the multiplier for fractionFatLost in MuscleAndFatMassLoss depend on gender:
    -changed multipler (was 3.0) to 3.5 for male, 2.8 for female
    -changed limiter for FatMassPercent (was 0.33) to 0.28 for male, .35 for female
Added a help button, with popup text that says: Change your diet by putting food on/off the plate. Change your Activity level by using the pull down menu or moving exercise on/off the book
Removed developer controls, including model controls and color choosers
Fixed: BMR at simulation start is different than BMR after reset all

New in 0.00.70
Changed the activity level values
Made the "Starving" and "heart attack" warnings larger and move more to the left to be in the open play area.
Made arrows (currently "<" and ">") on each side of the food/exercise boxes say "< More" and "More >" on the left and right, respectively.
Fixed textual descriptions for activity levels
Added a warning box when choosing reset all.